--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -15,6 +15,10 @@
   border: 1px solid red;
   color: red;
 }
+.last-article {
+  border: 1px solid var(--green);
+  color: var(--green);
+}
 a {
   font-weight: bold;
   opacity: 0.8;
