push some change

--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -1,6 +1,7 @@
 :root {
   --purple: #29134A;
   --green: #6D7873;
+  --grey: #d8d8d8;
 }
 .button {
   font-size: 0.9rem;
@@ -16,6 +17,8 @@
   color: red;
 }
 a {
+  height: inherit;
+  width: inherit;
   font-weight: bold;
   opacity: 0.8;
   color: inherit;
