--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -99,7 +99,7 @@ a:hover {
     font-size: inherit;
   }
 }
-@keyframes pulse-shadow {
+@keyframes pulse-shadow-dark {
   0% {
     box-shadow: 0 0 0 0 rgba(119, 91, 81, 0.4);
   }
@@ -108,5 +108,17 @@ a:hover {
   }
   100% {
     box-shadow: 0 0 0 0 rgba(119, 91, 81, 0);
+  }
+}
+
+@keyframes pulse-shadow-light {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+  }
+  70% {
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
