--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -82,7 +82,9 @@ a:hover {
   color: var(--burgandy);
 }
 .post-single img {
-  width: 100%;
+  max-height: 75vh;
+  width: auto;
+  padding: auto;
 }
 .post-single ul, li {
   color: var(--purple);
