--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -162,3 +162,14 @@ a:hover {
     transform: translate(15px);
   }
 }
+@keyframes fade-in {
+  0% {
+    transform: translate(-100px);
+  }
+  70% {
+    transform: translate(-70px);
+  }
+  100% {
+    transform: translate(0px);
+  }
+}
