--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -57,7 +57,8 @@ button:hover {
   color: var(--green);
 }
 blockquote {
-  font-size: 4vh;
+  font-size: 6vh;
+  color: var(--burgandy);
 }
 .author {
   font-size: 0.9rem;
@@ -90,9 +91,17 @@ a:hover {
 .hyperlien:hover {
   color: var(--burgandy);
 }
+.post-single p {
+  font-size: 1rem;
+  width: 60vw;
+}
+.post-single blockquote p {
+  font-size: 2rem;
+  line-height: 2.1rem;
+}
 .post-single img {
   max-height: 75vh;
-  width: auto;
+  max-width: 60vw;
   padding: auto;
 }
 .post-single ul, li {
@@ -127,6 +136,12 @@ a:hover {
   color:#FFFFFF !important;
 }
 @media screen and (max-width: 468px) {
+  .post-single img {
+    max-width: 80vw;
+  }
+  .post-single p {
+    width: 80vw;
+  }
   h2 {
     font-size: x-large;
   }
